# multilang-monorepo

./: .dockerignore  .gitignore  BUILD  CLAUDE.md  Makefile  README.md  buf.gen.yaml  buf.yaml  docker-compose.yml  go.mod  go.work  go.work.sum  mise.toml  nx.json  package.json  pants.toml  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json  turbo.json
.github/: filters.yaml
.github/workflows/: ci.yml  codegen-verify.yml
apps/dashboard/: .env.example  BUILD  Dockerfile  README.md  codegen.ts  next.config.mjs  package.json  project.json  tsconfig.json
docs/: nx-primer.md  pants-primer.md
infra/: BUILD  README.md  project.json  root.hcl
libs/common-go/: BUILD  README.md  go.mod  project.json
libs/common-py/: BUILD  README.md  project.json  pyproject.toml
libs/common-py/src/greenhouse_common/: __init__.py  logging.py
libs/common-ts/: BUILD  README.md  package.json  project.json
libs/graphql-schema/: BUILD  README.md  project.json  schema.graphql
libs/models-go/: BUILD  README.md  go.mod  project.json
libs/models-py/: BUILD  README.md  project.json  pyproject.toml
libs/models-py/src/greenhouse/: BUILD  __init__.py
libs/models-py/src/greenhouse/v1/: anomaly_pb2.py  anomaly_pb2_grpc.py  greenhouse_pb2.py  telemetry_pb2.py  telemetry_pb2_grpc.py
libs/models-ts/: BUILD  README.md  package.json  project.json
libs/proto/: README.md  project.json
ml/anomaly-detector/: BUILD  Dockerfile  README.md  project.json  pyproject.toml
ml/anomaly-detector/src/anomaly_detector/: BUILD  __init__.py  model.py  server.py
ml/anomaly-detector/tests/: test_model.py
(+54 files in other folders)
