[project]
name = "greenhouse-models"
version = "0.0.0"
description = "Generated protobuf/gRPC types for the greenhouse domain."
requires-python = ">=3.12"
dependencies = [
  "protobuf>=5.28",
  "grpcio>=1.67",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# `buf generate` writes the protobuf/gRPC output under src/greenhouse.
packages = ["src/greenhouse"]
